--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -34,7 +34,7 @@ jobs:
 
     - name: Install windows documentation requirements
       run: |
-        Install-Package Doxygen -Version 1.8.14 -y
+        choco install doxygen.portable -y
         choco install graphviz -y
     
     - name: Setup cmake
