--- a/.github/workflows/doxy.yml
+++ b/.github/workflows/doxy.yml
@@ -44,7 +44,7 @@ jobs:
         mkdir html_build
 
         git worktree add -B docs html_build origin/docs
-        robocopy .\docs\ .\html_build\ /e
+        cp -a .\docs\ .\html_build\ 
 
         cd html_build
 
