--- a/.github/workflows/doxy.yml
+++ b/.github/workflows/doxy.yml
@@ -34,6 +34,12 @@ jobs:
       run: |
         cd src
         doxygen Doxyfile
+        ls 
+        
+    - name: Build documentation with doxygen
+      run: |
+        cd docs
+        ls 
 
     - name: Auto-deploy doc changes
       run : |
