--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -54,6 +54,7 @@ jobs:
     # - name: Install Sphinx Latex
     #   run: |
         # sudo apt-get update -y && sudo apt-get install -y latexmk texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended
+
     - name: Build documentation with sphinx
       run: |
         cd "docs/Python Docs"
@@ -65,6 +66,7 @@ jobs:
         ls
         cd html
         ls
+
     - name: Auto-deploy doc changes
       run : |
         
@@ -80,6 +82,6 @@ jobs:
 
         git add . 
         git commit -m "ghpages"
-        git push 
+        git push -f
             
             
