--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ src/release
 /src/Cpp/exceptions/out/build/x64-Debug
 build/Python/.vscode
 src/Python/.vscode
+src/Python/dhart/.vscode
 out_vg_score.json
 Sample Usage/AnalysisCInterfaceSampleUsage/.vs/
 Sample Usage/AnalysisCInterfaceSampleUsage/x64
