udpate for building

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ py-algs/database/sql/c_test.db
 src/Python/pydhart/__pycache__/__init__.cpython-38.pyc
 py-algs/hfea/database/graphs/c_testDist.npy
 src/Python/pydhart/__pycache__/__init__.cpython-38.pyc
+build/Python/
