--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -27,6 +27,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
+    - name: Install from pypi
+      run: | 
+        pip install -i https://test.pypi.org/simple/ dhart
+        
     - name: Install documentation dependencies
       run: |
         pip install sphinx numpydoc matplotlib         
