--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -27,6 +27,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
+
     - name: Install from pypi
       run: | 
         pip install matplotlib 
@@ -55,22 +56,24 @@ jobs:
         ls
         cd src
         cmake --install .
-    - name: Install package
-      run: |
-        ls
-        cd build/Python
-        ls
-        pip install -e . 
-    - name: test if package dll is installed
-      run: | 
-        ls 
-        cd build/Python
-        ls 
-        cd bin 
-        ls
-        python -c "import dhart"
-        ls
-        python -c "from dhart.spatialstructures import Graph"
+    # - name: Install package
+    #   run: |
+    #     ls
+    #     cd build/Python
+    #     ls
+    #     pip install -e . 
+
+    # - name: test if package dll is installed
+    #   run: | 
+    #     ls 
+    #     cd build/Python
+    #     ls 
+    #     cd bin 
+    #     ls
+    #     python -c "import dhart"
+    #     ls
+    #     python -c "from dhart.spatialstructures import Graph"
+    
     # - name: Install Sphinx Latex
     #   run: |
         # sudo apt-get update -y && sudo apt-get install -y latexmk texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended
