--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ src/Python/pydhart/__pycache__/__init__.cpython-38.pyc
 py-algs/hfea/database/graphs/c_testDist.npy
 src/Python/pydhart/__pycache__/__init__.cpython-38.pyc
 build/Python/
+.vscode/settings.json
+.pypirc
