--- a/Analysis Project Template/HumanFactorsSamples/HumanFactorsSamples.vcxproj
+++ b/Analysis Project Template/HumanFactorsSamples/HumanFactorsSamples.vcxproj
@@ -19,13 +19,13 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="HumanFactorsSamples.cpp" />
+    <ClCompile Include="DHARTAPISamples.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
     <ProjectGuid>{7e161f98-8ef9-465e-bfaf-35cc5d6bb141}</ProjectGuid>
-    <RootNamespace>HumanFactorsSamples</RootNamespace>
+    <RootNamespace>DHARTAPISamples</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
