--- a/Analysis Project Template/HumanFactorsSamples/HumanFactorsSamples.vcxproj.filters
+++ b/Analysis Project Template/HumanFactorsSamples/HumanFactorsSamples.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="HumanFactorsSamples.cpp">
+    <ClCompile Include="DHARTAPISamples.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
