--- a/src/Cpp/spatialstructuresdb/CMakeLists.txt
+++ b/src/Cpp/spatialstructuresdb/CMakeLists.txt
@@ -1,10 +1,10 @@
-﻿# CMakeList.txt : CMake project for humanfactors, include source and define
+﻿# CMakeList.txt : CMake project for DHART_API, include source and define
 # project specific logic here.
 #
 cmake_minimum_required (VERSION 3.8)
 
-project ("humanfactors")
+project ("DHART_API")
 
 # Add source to this project's executable.
-add_executable (humanfactors "humanfactors.cpp" "humanfactors.h")
+add_executable (DHART_API "DHART_API.cpp" "DHART_API.h")
 
