--- a/src/Csharp/CMakeLists.txt
+++ b/src/Csharp/CMakeLists.txt
@@ -1,5 +1,5 @@
 ﻿cmake_minimum_required(VERSION 3.8)
-project("HumanFactorsCSharp" CSharp)
+project("DHARTAPICSharp" CSharp)
 
 ### NOTE:
 # If you have visual studio open for the generated projects, please close it before attempting to regenerate.
@@ -8,7 +8,7 @@ project("HumanFactorsCSharp" CSharp)
 
 # Include whatever needs to be included for both the test and "normal" assemblies
 LIST (APPEND test_references "Microsoft.Csharp")
-List (APPEND test_references "HumanFactorsCSharp")
+List (APPEND test_references "DHARTAPICSharp")
 List (APPEND test_references "Microsoft.VisualStudio.QualityTools.UnitTestFramework")
 LIST (APPEND test_references "System")
 LIST (APPEND test_references "System.Numerics.Vectors")
@@ -29,7 +29,7 @@ set(CMAKE_CSharp_FLAGS "/langversion:7.3")
 # Include packages. These will add source files to ${sources} and test files to ${test_sources} for each package
 include(${CMAKE_CURRENT_LIST_DIR}/packages/base/package.cmake)
 
-if(${HumanFactors_Config} STREQUAL "All")
+if(${DHARTAPI_Config} STREQUAL "All")
 	include(${CMAKE_CURRENT_LIST_DIR}/packages/spatialstructures/package.cmake)
 	include(${CMAKE_CURRENT_LIST_DIR}/packages/geometry/package.cmake)
 	include(${CMAKE_CURRENT_LIST_DIR}/packages/raytracer/package.cmake)
@@ -37,44 +37,44 @@ if(${HumanFactors_Config} STREQUAL "All")
 	include(${CMAKE_CURRENT_LIST_DIR}/packages/viewanalysis/package.cmake)
 	include(${CMAKE_CURRENT_LIST_DIR}/packages/visibilitygraph/package.cmake)
 	include(${CMAKE_CURRENT_LIST_DIR}/packages/pathfinding/package.cmake)
-elseif(${HumanFactors_Config} STREQUAL "RayTracer")
+elseif(${DHARTAPI_Config} STREQUAL "RayTracer")
 	include(${CMAKE_CURRENT_LIST_DIR}/packages/raytracer/package.cmake)
 	include(${CMAKE_CURRENT_LIST_DIR}/packages/geometry/package.cmake)
-elseif(${HumanFactors_Config} STREQUAL "GraphGenerator")
+elseif(${DHARTAPI_Config} STREQUAL "GraphGenerator")
 	include(${CMAKE_CURRENT_LIST_DIR}/packages/spatialstructures/package.cmake)
 	include(${CMAKE_CURRENT_LIST_DIR}/packages/raytracer/package.cmake)
 	include(${CMAKE_CURRENT_LIST_DIR}/packages/geometry/package.cmake)
 	include(${CMAKE_CURRENT_LIST_DIR}/packages/graphgenerator/package.cmake)
-elseif(${HumanFactors_Config} STREQUAL "VisibilityGraph")
+elseif(${DHARTAPI_Config} STREQUAL "VisibilityGraph")
 	include(${CMAKE_CURRENT_LIST_DIR}/packages/spatialstructures/package.cmake)
 	include(${CMAKE_CURRENT_LIST_DIR}/packages/raytracer/package.cmake)
 	include(${CMAKE_CURRENT_LIST_DIR}/packages/geometry/package.cmake)
 	include(${CMAKE_CURRENT_LIST_DIR}/packages/visibilitygraph/package.cmake)
-elseif(${HumanFactors_Config} STREQUAL "ViewAnalysis")
+elseif(${DHARTAPI_Config} STREQUAL "ViewAnalysis")
 	include(${CMAKE_CURRENT_LIST_DIR}/packages/raytracer/package.cmake)
 	include(${CMAKE_CURRENT_LIST_DIR}/packages/geometry/package.cmake)
 	include(${CMAKE_CURRENT_LIST_DIR}/packages/viewanalysis/package.cmake)
-elseif(${HumanFactors_Config} STREQUAL "Pathfinder")
+elseif(${DHARTAPI_Config} STREQUAL "Pathfinder")
 	include(${CMAKE_CURRENT_LIST_DIR}/packages/pathfinding/package.cmake)
 	include(${CMAKE_CURRENT_LIST_DIR}/packages/spatialstructures/package.cmake)
 endif()
 
 
-add_library(HumanFactorsCSharp SHARED)
+add_library(DHARTAPICSharp SHARED)
 
-# Here we use the source list as input to the HumanFactorsCSharp target
-target_sources(HumanFactorsCSharp PRIVATE ${sources})
+# Here we use the source list as input to the DHARTAPICSharp target
+target_sources(DHARTAPICSharp PRIVATE ${sources})
 
 set_target_properties(
-		HumanFactorsCSharp
+		DHARTAPICSharp
 		PROPERTIES
 		VS_DOTNET_REFERENCES "${normal_references}"
 		VS_DOTNET_TARGET_FRAMEWORK_VERSION "v4.5"
 )
 
-target_compile_options(HumanFactorsCSharp PRIVATE "/unsafe")
- install(TARGETS HumanFactorsCSharp
-		EXPORT HumanFactorsCSharp
+target_compile_options(DHARTAPICSharp PRIVATE "/unsafe")
+ install(TARGETS DHARTAPICSharp
+		EXPORT DHARTAPICSharp
 		RUNTIME DESTINATION bin
 )
 
@@ -87,14 +87,14 @@ set_target_properties(
 		PROPERTIES
 		VS_GLOBAL_PROJECT_TYPES "{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
 		# VS_GLOBAL_PROJECT_TYPES "{d902c041-2bf7-4fa0-afd7-2a09df2dbb7a}"
-		VS_DOTNET_TARGET_FRAMEWORK_VERSION "v4.5.1"
+		VS_DOTNET_TARGET_FRAMEWORK_VERSION "v4.5.2"
 		VS_DOTNET_REFERENCES "${test_references}"
 )
 
 install(TARGETS hfcsharptest EXPORT hfcsharptest RUNTIME DESTINATION bin)
 
 
-if (HumanFactors_BuildCSharpTests)
+if (DHARTAPI_BuildCSharpTests)
 	add_subdirectory(Examples)
 endif()
 
