--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,4 +1,4 @@
-name: Sphinx Documentation
+name: Documentation
 
 on:
   push:
@@ -6,10 +6,70 @@ on:
       - main
 
 jobs:
-  build:
+  doxygen:
 
     runs-on: windows-2019
     strategy:
+      max-parallel: 1
+      matrix:
+        python-version: [3.8]
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+    - uses: actions/checkout@v2
+      with: # for github push action
+        #persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
+        fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
+
+    - name: Install windows documentation requirements
+      run: |
+        $url = "https://www.doxygen.nl/files/doxygen-1.9.4.windows.x64.bin.zip"
+        Start-DownloadWit`hRetry -Url $url -Name "doxygen.zip" -DownloadPath "C:\"
+        Extract-7Zip -Path  "C:\doxygen.zip" -DestinationPath "C:\windows\system32"
+        doxygen --version`
+
+        choco install graphviz -y
+
+        #sudo apt-get install -y doxygen
+        #sudo apt-get install -y graphviz
+    
+    - name: Build c++ documentation with doxygen
+      run: |
+        cd src
+        doxygen Doxyfile
+        ls 
+        
+    - name: Build c# documentation with doxygen
+      run: |
+        doxygen Doxyfile_Csharp
+        doxygen Doxyfile_Public_CSharp
+
+    - name: Auto-deploy doc changes
+      run : |
+        
+        git config --local user.email "action@github.com"
+        git config --local user.name "github-actions[bot]"
+
+        mkdir html_build
+
+        git worktree add -B docs html_build origin/docs
+        # cp -a docs/. html_build/ 
+        robocopy .\docs\ .\html_build\ /e
+
+        cd html_build
+
+        git add . 
+        git commit -m "ghpages"
+        git push -f
+            
+  sphinx:
+    runs-on: windows-2019
+    strategy:
+      max-parallel: 1
       matrix:
         python-version: [3.8]
 
