--- a/.gitattributes
+++ b/.gitattributes
@@ -6,6 +6,7 @@
 *.db filter=lfs diff=lfs merge=lfs -text
 *.objbak filter=lfs diff=lfs merge=lfs -text
 *.json filter=lfs diff=lfs merge=lfs -text
+CMakeSettings.json !filter !diff !merge text
 *.mov filter=lfs diff=lfs merge=lfs -text
 *.blend filter=lfs diff=lfs merge=lfs -text
 *.resS filter=lfs diff=lfs merge=lfs -text
