--- a/src/CMakeSettings.json
+++ b/src/CMakeSettings.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "configurations": [
     {
       "name": "x64-Debug",
@@ -166,7 +166,7 @@
         },
         {
           "name": "DHARTAPI_BuildCSharpTests",
-          "value": "True",
+          "value": "False",
           "type": "BOOL"
         }
       ]
