--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -93,7 +93,7 @@ jobs:
         pip install matplotlib 
         pip install numpy 
         pip install scipy
-        pip install -i https://test.pypi.org/simple/ dhart
+        pip install dhart
         python -c "from dhart.spatialstructures import Graph"
 
     - name: Install documentation dependencies
