yml install local package

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -115,12 +115,13 @@ jobs:
         ls
         cd src
         cmake --install .
-    # - name: Install package
-    #   run: |
-    #     ls
-    #     cd build/Python
-    #     ls
-    #     pip install -e . 
+        
+    - name: Install package
+      run: |
+        ls
+        cd build/Python
+        ls
+        pip install -e . 
 
     # - name: test if package dll is installed
     #   run: | 
